2011-02-20  Karl Berry  <karl@gnu.org>

	* doc/refcard/txirefcard.tex,
	* doc/texinfo.txi (Command Summary): add @copying, @insertcopying,
	@indent, @headitemfont, @dotless, @unmacro.
	* doc/refcard/txicmdcheck: also check against implementation.
	* util/txicmdlist: script to output all implemented commands.

2011-02-18  Karl Berry  <karl@gnu.org>

	* doc/refcard/txirefcard.tex,
	* doc/texinfo.txi (Command Summary): add @allowcodebreaks,
        @fonttextsize.

2011-02-17  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Command Summary): add @frenchspacing.
	* doc/refcard/txirefcard.tex (@frenchspacing): add.

2011-02-16  Sergey Poznyakoff  <gray@gnu.org>

	* info/echo-area.c (ea_possible_completions): If the
	key which invokes the function was pressed twice, and
	it represents a printable character, insert that character in the
	echo area.  E.g., pressing ?? inserts a single question mark into
	the EA.

2011-02-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (anchor, HTML Xref Link Preservation): two
	approaches to preserving links to deleted/renamed nodes.

2011-02-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\sectionheading): check that we are not in an
	environment such as @table.  Report from Akim,
	https://savannah.gnu.org/bugs/?15514.

	* NEWS,
	* doc/texinfo.txi (Command Summary): missed @urefbreakstyle.
	
	* util/texinfo.dtd (sp, printindex): categorize.

2011-02-10  Sergey Poznyakoff  <gray@gnu.org>

	Exclude node headers from searches.
	
	* info/nodes.h (NODE): New member body_start.

	* info/search.c (regexp_search): Remove length argument.
	Search bounds are given by binding.  Change the code accordingly.
	* info/search.h (regexp_search): Change signature.
	* info/session.c (info_search_in_node_internal): New argument
	match_nodename.  If it is set, try to match nodename first.
	Otherwise, match the node contents, excluding the node line.
	(info_search_in_node): Pass 0 as match_nodename to
	info_search_in_node_internal.